Tweaks and cleanup
- Remove email from the .gitconfig and fixed spacing
- fix the broken suffix and prefix variables
- simplify the history_cleaner script and move it into the java file
- fix(bin): move the file backup and overriding logic into the java file
- kube context tweaks|kall func for *all* k8s resources|bugfix for cleaner
- Switch zsh back to using oh-my-zsh and cleanup git config and scripts